# ekorbia-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  playwright.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  keyboard-shortcuts.md  managing-models.md  memory.md  overlay.md  private-chats.md  prompts.md  saving-files-from-chat.md  screenshots.md  settings.md  spaces.md  themes.md  troubleshooting.md  voice-input.md  watches.md
scripts/: build-docs.sh  dev.sh  fetch-llama-server.sh  run-all-tests.sh  run-ui-tests.sh
src-tauri/: Cargo.toml  Info.plist  about.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/builtin-prompts/: album-deep-dive.md  brainstorm.md  careers-watcher.md  cliff-notes.md  cloudflare-uptime.md  cover-letter.md  devils-advocate.md  email-draft.md  explain-simply.md  game-lateral-thinking.md  game-murder-mystery.md  game-text-adventure.md  gcp-uptime.md  how-does-it-end.md  log-triage.md  new-listings-watcher.md  notes-synthesizer.md  paper-tracker.md  price-watcher.md  rental-watcher.md  resume-coach.md  sensitive-doc-qa.md  should-i-watch.md  summarize.md  tone-reframer.md  translate-french.md  translate-german.md  translate-spanish.md  website-personal.md  website-professional.md  wikipedia-watch.md
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: render-third-party-licenses.py
src-tauri/src/: chat.rs  db.rs  lib.rs  llm.rs  log.rs  main.rs  memory.rs  ollama.rs  overlay.rs  prompts.rs  screenshot.rs  search.rs  settings.rs  spaces.rs  system.rs  text_extract.rs  voice.rs
src-tauri/src/attachments/: cancel.rs  commands.rs  config.rs  folder.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/engine/: catalog.json  downloads.rs  mod.rs  supervisor.rs
src-tauri/src/files/: commands.rs  mod.rs  sandbox.rs  tools.rs
src-tauri/src/providers/: engine.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/watch/: cancel.rs  commands.rs  folder.rs  http.rs  mod.rs  pipeline.rs  rss.rs  url.rs
tests/e2e/: attachments-embed-default.spec.js  backend-settings.spec.js  capability-badges.spec.js  chat-row.spec.js  compare.spec.js  composer-prompt-picker.spec.js  composer.spec.js  empty-state.spec.js  engine-backend.spec.js  engine-gate-guided.spec.js  files-preview.spec.js  hotkey.spec.js  markdown.spec.js  message-details.spec.js  modals.spec.js  model-manager.spec.js  model-picker.spec.js  offline-boot.spec.js  ollama-gate-guided.spec.js  onboarding.spec.js  settings-tabs.spec.js  sidebar-groups.spec.js  (+8 more)
ui/: atoms.jsx  chat.jsx  compare-chat.jsx  data.jsx  files.jsx  icons.jsx  index.html  main.jsx  markdown.jsx  model-manager.jsx  onboarding.jsx  overlay.jsx  overlays.jsx  prompts-library.jsx  settings.jsx  shell.jsx  toast.jsx  tokens.jsx  tweaks-panel.jsx  utils.js  voice.jsx  watch.jsx
(+19 files in other folders)
